Fix input overflowing outside parent div.

--- a/common/style.css
+++ b/common/style.css
@@ -72,7 +72,6 @@ body {
     width: 75%;
     font-size: x-large;
     padding: 5px;
-    padding-right: 10px; /* compensate input */
     border-radius: 5px;
 }
 
@@ -81,6 +80,7 @@ body {
     font-size: x-large;
     color: #333;
     margin-bottom: 5px;
+    box-sizing: border-box;
 }
 
 #popup button {
